Update Java to 14 with preview features